--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
-Для запуска необходим пакет geopandas
+*Для запуска необходим пакет geopandas
 Архив validatiuon.rar распаковать в одну папку с программой
 После запуска программы ответ будет храниться в файле output.xlsx
