--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
-*Для запуска необходим пакет geopandas
+Для запуска необходим пакет geopandas
+Запускаемый файл для прогноза пожара - main(1).py
+Запускаемый файл для визуального отображения полигона на карте - main.py
 Архив validatiuon.rar распаковать в одну папку с программой
 После запуска программы ответ будет храниться в файле output.xlsx
